--- a/css/styles.css
+++ b/css/styles.css
@@ -610,6 +610,10 @@ input:hover {
         transition: 0.2s;  
     }
 
+    #main-heading {
+        padding: 6em 0 0 0;
+    }
+    
     .bubble {
         padding-left: 2%;
         padding-right: 2%;
