--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ p {
 
 #main-heading {
     margin: 2px;
-    padding: 50vh;
+    padding: 6em;
 
 }
 
@@ -613,7 +613,7 @@ input:hover {
     #main-heading {
         padding: 6em 0 0 0;
     }
-    
+
     .bubble {
         padding-left: 2%;
         padding-right: 2%;
